Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-13155

Timeout for view tests while checking for ep_queue_size

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.0.0
    • 3.0.1, 4.0.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • CentOS 64 Bit
      Build 968
    • Untriaged
    • Centos 64-bit
    • No
    • Mar 9 - Mar 27

    Description

      1. Create a 4 node cluster 20,21,22,23
      2. Rebalance the cluster
      3. Add 200000 documents equally across cluster
      4. Failover 2 nodes (20,23)
      5. Index query on master node - 21
      6. Rebalance with following command:
      password=password&ejectedNodes=ns_172.23.107.23ns_1%40172.23.107.20&user=Administrator&knownNodes=ns_1%40172.23.107.21%2Cns_1%40172.23.107.22%2Cns_1%40172.23.107.23%2Cns_1%40172.23.107.20
      8. Create ddoc - node 21
      9. Remove on the ddoc created in step 8
      10. Check changes in the queue - ep_queue_size
      Timeout occurs during checking of the queue_size

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-13155
          # Subject Branch Project Status CR V

          Activity

            People

              drigby Dave Rigby (Inactive)
              ritam.sharma Ritam Sharma
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty