MB-13155: Decrement dirtyQueue size after rollback

We will need to decrement the dirty queue size stat
of the vbucket whose checkpoints have been cleared
during rollback.

Change-Id: I06fc32ac8d7ab77b1bc47df51b3809aab728dce8
Reviewed-on: http://review.couchbase.org/47580
Reviewed-by: Manu Dhundi <manu@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: abhinav dangeti <abhinav@couchbase.com>